--- a/spotify-capsule-app/styles/globals.css
+++ b/spotify-capsule-app/styles/globals.css
@@ -15,6 +15,16 @@ a {
   box-sizing: border-box;
 }
 
+divOne {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: black;
+  min-height: screen;
+  width: auto;
+  justify-content: center;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
